adding support for MySQL and PostgreSQL through the MySQLDS and PostgreSQLDS data sources and fixing issue with not copying over the .openshift/config/standalone.xml before starting the wildfly server

--- a/bin/control
+++ b/bin/control
@@ -280,6 +280,7 @@ function start() {
   if isrunning; then
       echo "Application is already running"
   else    
+	${WILDFLY_BIN_DIR}/standalone-config.conf > $OPENSHIFT_WILDFLY_DIR/logs/server.log 2>&1
 	${WILDFLY_BIN_DIR}/standalone.sh -b $OPENSHIFT_WILDFLY_IP -bmanagement=$OPENSHIFT_WILDFLY_IP > $OPENSHIFT_WILDFLY_DIR/logs/server.log 2>&1 &  
     PROCESS_ID=$!
     echo "$PROCESS_ID" > ${WILDFLY_PID_FILE}
