--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -92,5 +92,9 @@ Endpoints:
   - Private-IP-Name: IP
     Private-Port-Name: MANAGEMENT_HTTP_PORT
     Private-Port: 9990
+    Public-Port-Name:    MANAGEMENT_PROXY_PORT
+     Mappings:
+    - Frontend: '/console'
+      Backend: '//console'
 Additional-Control-Actions:
     - threaddump
