--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -93,5 +93,8 @@ Endpoints:
     Private-Port-Name: MANAGEMENT_HTTP_PORT
     Private-Port: 9990
     Public-Port-Name:  MANAGEMENT_PROXY_PORT
+    Mappings:
+    - Frontend: '//console'
+      Backend: ''
 Additional-Control-Actions:
     - threaddump
