--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -94,7 +94,7 @@ Endpoints:
     Private-Port: 9990
     Public-Port-Name:  MANAGEMENT_PROXY_PORT
     Mappings:
-    - Frontend: '//console'
-      Backend: ''
+    - Frontend: '/console'
+      Backend: '/console/App.html'
 Additional-Control-Actions:
     - threaddump
