--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,6 +1,6 @@
 Name: wildfly
 Cartridge-Short-Name: WILDFLY
-Display-Name: Wildfly Application Server 8.0.0.Beta1
+Display-Name: Wildfly Application Server 8.0.0.CR1
 Description: "The leading open source Java EE7 application server for enterprise Java applications. Popular development frameworks include Seam, CDI, Weld, and Spring."
 Version: '8'
 License: LGPL
