--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -79,9 +79,14 @@ Endpoints:
     Private-Port-Name:   HTTP_PORT
     Private-Port:        8080
     Public-Port-Name:    HTTP_PROXY_PORT
+    Protocols:
+    - http
+    - ws
     Mappings:
     - Frontend: ''
       Backend: ''
+      Options:
+        websocket: true
     - Frontend: /health
       Backend: ''
       Options:
