--- a/bin/control
+++ b/bin/control
@@ -31,12 +31,12 @@ function getscanconfig() {
 function waitondeployments() {
     if ! ismgmtup; then
       client_message "Timed out waiting for management listening port"
-      client_message "Could not connect to Wildfly management interface, skipping deployment verification"
+      client_message "Could not connect to WildFly management interface, skipping deployment verification"
     else 
       getscanconfig
 
       if [ "$SCANCONFIG" == "" ]; then
-        client_message "Could not connect to Wildfly management interface, skipping deployment verification"
+        client_message "Could not connect to WildFly management interface, skipping deployment verification"
       elif [[ $SCANCONFIG =~ '"scan-enabled" => true' ]]; then
         pushd $WILDFLY_DEPLOYMENTS_DIR
 
@@ -259,7 +259,7 @@ function build() {
 }
 
 function deploy() {
-  echo "Deploying Wildfly"
+  echo "Deploying WildFly"
 
   if [ "$(ls ${OPENSHIFT_REPO_DIR}/deployments)" ]; then
     rsync -r --delete --exclude ".*" ${OPENSHIFT_REPO_DIR}/deployments/ $WILDFLY_DEPLOYMENTS_DIR
@@ -304,7 +304,7 @@ function stop() {
       echo "Sending SIGTERM to wildfly:$pid ..." 1>&2
       killtree $pid
     else
-      echo "Failed to locate Wildfly PID File" 1>&2
+      echo "Failed to locate WildFly PID File" 1>&2
     fi
   fi
 }
@@ -352,7 +352,7 @@ function threaddump() {
         client_result ""
         client_result "The thread dump file will be available via: rhc tail $OPENSHIFT_APP_NAME -f ${OPENSHIFT_TMP_DIR}${cartridge_type}.log -o '-n 250'"
     else 
-        echo "Failed to locate Wildfly PID File"
+        echo "Failed to locate WildFly PID File"
     fi
 }
 
