--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -55,6 +55,8 @@ Provides:
 Publishes:
   publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
+  publish-wildfly-cluster:
+    Type: NET_TCP:wildfly-cluster-info
 Subscribes:
   set-env:
     Type: "ENV:*"
@@ -70,6 +72,8 @@ Subscribes:
     Required : false
   set-generic-java:
     Type: "ENV:NET_TCP:generic-java"
+  set-wildfly-cluster:
+    Type: NET_TCP:wildfly-cluster-info
 Scaling:
   Min: 1
   Max: -1
@@ -90,6 +94,10 @@ Endpoints:
       Backend: ''
       Options:
         health: true
+  - Private-IP-Name:     IP
+    Private-Port-Name: CLUSTER_PORT
+    Private-Port: 7600
+    Public-Port-Name: CLUSTER_PROXY_PORT        
   - Private-IP-Name: IP
     Private-Port-Name: MANAGEMENT_HTTP_PORT
     Private-Port: 9990
