Correcting references to "WILDFLY_MODULEPATH" ("JBOSS_MODULEPATH" should be referenced instead).

--- a/versions/8/bin/standalone.conf
+++ b/versions/8/bin/standalone.conf
@@ -157,12 +157,12 @@ if [ -n "$JAVA_OPTS_EXT" ]; then
     JAVA_OPTS="$JAVA_OPTS $JAVA_OPTS_EXT"
 fi
 
-export WILDFLY_MODULEPATH=${OPENSHIFT_REPO_DIR}/.openshift/config/modules
+export JBOSS_MODULEPATH=${OPENSHIFT_REPO_DIR}/.openshift/config/modules
 
 if [ ! -z "$OPENSHIFT_WILDFLY_MODULE_PATH" ]; then
-   export WILDFLY_MODULEPATH=$WILDFLY_MODULEPATH:$OPENSHIFT_WILDFLY_MODULE_PATH
+   export JBOSS_MODULEPATH=$JBOSS_MODULEPATH:$OPENSHIFT_WILDFLY_MODULE_PATH
 fi
 
-export WILDFLY_MODULEPATH=$WILDFLY_MODULEPATH:${CART_DIR}/modules
+export JBOSS_MODULEPATH=$JBOSS_MODULEPATH:${CART_DIR}/modules
 export JAVA_OPTS
 
