--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,13 +1,13 @@
-Name: wildfly
-Cartridge-Short-Name: WILDFLY
-Display-Name: WildFly Application Server 8.1.0.Final
-Description: "The leading open source Java EE7 application server for enterprise Java applications. Popular development frameworks include Seam, CDI, Weld, and Spring."
+Name: aerogear-push
+Cartridge-Short-Name: AEROGEAR_PUSH
+Display-Name: AeroGear Push Server 1.0.0
+Description: "Provides the AeroGear UnifiedPush Server, a server that allows sending push notifications to different mobile platforms, and the AeroGear SimplePush Server, an implementation of Mozilla's SimplePush Protocol. Runs on JBoss Application Server 7."
 Version: '8'
-License: LGPL
-License-Url: http://www.gnu.org/copyleft/lesser.txt
-Vendor: WildFly
+License: "ASL 2.0"
+License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
+Vendor: AeroGear
 Cartridge-Version: '0.0.5'
-Cartridge-Vendor: wildfly
+Cartridge-Vendor: aerogear
 Categories:
   - service
   - web_framework
@@ -20,7 +20,7 @@ Website: http://www.aerogear.org
 Help-Topics:
   "Developer Center": https://www.openshift.com/developers
 Cart-Data:
-  - Key: OPENSHIFT_WILDFLY_LOG_DIR
+  - Key: OPENSHIFT_AEROGEAR_PUSH_LOG_DIR
     Type: environment
     Description: "Directory to store application log files."
   - Key: OPENSHIFT_TMP_DIR
@@ -29,10 +29,10 @@ Cart-Data:
   - Key: OPENSHIFT_REPO_DIR
     Type: environment
     Description: "Application root directory where application files reside. This directory is reset every time you do a git-push"
-  - Key: OPENSHIFT_WILDFLY_HTTP_PORT
+  - Key: OPENSHIFT_AEROGEAR_PUSH_HTTP_PORT
     Type: environment
     Description: "Internal port to which the web-framework binds to."
-  - Key: OPENSHIFT_WILDFLY_IP
+  - Key: OPENSHIFT_AEROGEAR_PUSH_IP
     Type: environment
     Description: "Internal IP to which the web-framework binds to."
   - Key: OPENSHIFT_APP_DNS
