--- a/metadata/managed_files.yml
+++ b/metadata/managed_files.yml
@@ -1,10 +1,8 @@
 ---
 snapshot_exclusions:
-- ~/wildfly/versions/8
-- ~/wildfly/modules
-- ~/wildfly/usr/lib/jvm
 - ~/aerogear-push/versions
 - ~/aerogear-push/modules
+- ~/aerogear-push/usr/lib/jvm
 locked_files:
 - bin/
 - bin/*
