--- a/versions/8/bin/standalone.conf
+++ b/versions/8/bin/standalone.conf
@@ -16,6 +16,7 @@ function print_sed_exp_replace_env_var {
   printf "%s\n" "$sed_exp"
 }
 
+cartridge_type="aerogear-push"
 CART_DIR=${OPENSHIFT_AEROGEAR_PUSH_DIR}
 
 # if the repo contains a standalone.xml, back it up
