--- a/versions/1.0.0/bin/standalone.conf
+++ b/versions/1.0.0/bin/standalone.conf
@@ -154,6 +154,6 @@ if [ ! -z "$OPENSHIFT_AEROGEAR_PUSH_MODULE_PATH" ]; then
    export JBOSS_MODULEPATH=$JBOSS_MODULEPATH:$OPENSHIFT_AEROGEAR_PUSH_MODULE_PATH
 fi
 
-export JBOSS_MODULEPATH=$JBOSS_MODULEPATH:${CART_DIR}/modules
+export JBOSS_MODULEPATH=$JBOSS_MODULEPATH:${CART_DIR}/usr/modules
 export JAVA_OPTS
 
