--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -86,6 +86,8 @@ Endpoints:
     Private-Port-Name:   HTTP_PORT
     Private-Port:        8080
     Public-Port-Name:    HTTP_PROXY_PORT
+    WebSocket-Port-Name: WEBSOCKET_PORT
+    WebSocket-Port:      8676
     Protocols:
     - http
     - ws
@@ -98,12 +100,23 @@ Endpoints:
       Backend: ''
       Options:
         health: true
-  - Private-IP-Name:     IP
+  - Private-IP-Name:   IP
     Private-Port-Name: CLUSTER_PORT
-    Private-Port: 7600
-    Public-Port-Name: CLUSTER_PROXY_PORT
+    Private-Port:      7600
+    Public-Port-Name:  CLUSTER_PROXY_PORT
+  - Private-IP-Name:   IP
+    Private-Port-Name: MESSAGING_PORT
+    Private-Port:      5445
+    Public-Port-Name:  MESSAGING_PROXY_PORT
+  - Private-IP-Name:   IP
+    Private-Port-Name: MESSAGING_THROUGHPUT_PORT
+    Private-Port:      5455
+  - Private-IP-Name:   IP
+    Private-Port-Name: REMOTING_PORT
+    Private-Port:      4447
+    Public-Port-Name:  REMOTING_PROXY_PORT
   - Private-IP-Name: IP
     Private-Port-Name: MANAGEMENT_HTTP_PORT
-    Private-Port: 9990
+    Private-Port: 9990	
 Additional-Control-Actions:
     - threaddump
