--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,6 +1,6 @@
 Name: aerogear-push
 Cartridge-Short-Name: AEROGEAR_PUSH
-Display-Name: AeroGear Push Server 1.0.1
+Display-Name: AeroGear Push Server 1.0.1 and WildFly
 Description: "Provides the AeroGear UnifiedPush Server, a server that allows sending push notifications to different mobile platforms, and the AeroGear SimplePush Server, an implementation of Mozilla's SimplePush Protocol. Runs on JBoss Application Server 7."
 Version: '1.0.1'
 License: "ASL 2.0"
