--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,12 +1,12 @@
 Name: aerogear-push
 Cartridge-Short-Name: AEROGEAR_PUSH
-Display-Name: AeroGear UnifiedPush Server 1.1.0 and WildFly
+Display-Name: AeroGear UnifiedPush Server 1.1.0.Final and WildFly
 Description: "Provides the AeroGear UnifiedPush Server, a server that allows sending push notifications to different mobile platforms."
 Version: '1.1.0'
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Vendor: AeroGear
-Cartridge-Version: '1.0.6'
+Cartridge-Version: '1.0.7'
 Cartridge-Vendor: aerogear
 Categories:
   - service
